Add: auth with Spring Security + my reservations